day7/apps/nodejs/manifests/visitreport/scm-visitreport-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scm-visitreport
  labels:
    application: scmcontacts
    service: scmvisitreport
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmcontacts
      service: scmvisitreport
  template:
    metadata:
      labels:
        application: scmcontacts
        service: scmvisitreport
    spec:
      automountServiceAccountToken: false
      containers:
        - name: application
          resources:
            requests:
              memory: '64Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '500m'
          image: azuredevcollege.azurecr.io/adcd7/scmvisitreportsapi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
