day7/apps/nodejs/manifests/visitreport/scm-visitreport.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: scm-visitreport 
  labels:
    application: scmcontacts
    service: scmvisitreport
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmcontacts
      service: scmvisitreport
  template:
    metadata:
      labels:
        application: scmcontacts
        service: scmvisitreport
    spec:
      containers:
        - name: application
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          image: azuredevcollege.azurecr.io/adcday5/scmvisitreportsapi:20200302.1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
      imagePullSecrets:
      - name: regcred
