day7/apps/nodejs/manifests/visitreport/scm-visitreport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: visitreport 
  labels:
    application: scmcontacts
    service: scmvisitreport
spec:
  type: ClusterIP
  selector:
    application: scmcontacts
    service: scmvisitreport
  ports:
  - port: 8080
    targetPort: 3000
