day7/apps/nodejs/manifests/visitreport/scm-visitreport-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-visitreports
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Accept-Language"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "12m"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - #{adcday7HOSTNAME}#
      secretName: tls-secret
  rules:
  - host: #{adcday7HOSTNAME}#
    http:
      paths:
      - path: /api/visitreports(/|$)(.*)
        backend:
          serviceName: visitreport
          servicePort: 8080
